# pyutils

./: .gitignore  LICENSE  README  pyproject.toml  setup.py
.github/workflows/: publish.yml
common/: __init__.py  calculator.py  plotter.py  rootutils.py  utils.py
icecube/: __init__.py  dirs.py
snowflake/: __init__.py  dirs.py  library.py  llh.py  shoveler.py  standalone.py  unfold.py
src/common/: calculator.py  plotter.py  rootutils.py  utils.py
src/snowflake/: __init__.py  dirs.py  library.py  llh.py  shoveler.py  standalone.py  unfold.py
src/t2k/analysis/: Base.py  P0DCutUtils.py  binning.py  utils.py  varstrings.py
src/t2k/production/: README.md
src/t2k/production/lib/: MCConfigClass.py
t2k/: __init__.py
t2k/analysis/: efficiency.py  highland_configurations.py  makePlots.py
t2k/production/flux/templates/: genie_setup_flux_probs.cfg  template_script.sh
t2k/production/lib/: MCJobClass.py
tianlu/: __init__.py  cudirs.py  rootutils.py  submit.py
tianlu/analysis/: Base.py  __init__.py  constants.py  sortdicts.py  submit_analysis.py
tianlu/production/lib/: __init__.py  utils.py
